[package]
name = "colock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lock_api = "0.4.10"
cfg-if = "1.0.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.3"

[target.'cfg(windows)'.dependencies]
windows-targets = "0.48"


[dev-dependencies]
itertools = "0.11.0"
rand = "0.8.5"
criterion = { version = "0.5.1", features = ["stable", "async_tokio"] }
tokio = { version = "1", features = ["full"] }
tokio-scoped = "0.2.0"
async-trait = "0.1.73"
futures-polling = "0.1.1"


#for benchmarks
parking_lot = "0.12.1"
seqlock = "0.2"
libc = "0.2"
usync = "0.2.1"
maitake-sync = "0.1.0"

[[bench]]
name = "mutex"
harness = false

[[bench]]
name = "async_mutex"
harness = false

[[bench]]
name = "mutex_worst_latency"
harness = false


[profile.bench]
lto = true