[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
rand = "0.8.5"
criterion = { version = "0.5.1", features = ["stable", "async_tokio"] }
tokio = { version = "1", features = ["full"] }
tokio-scoped = "0.2.0"
async-trait = "0.1.73"
futures-polling = "0.1.1"

colock = {path="../colock"}
parking_lot = "0.12.1"
seqlock = "0.2"
libc = "0.2"
usync = "0.2.1"
maitake-sync = "0.1.0"


[[bench]]
name = "mutex"
harness = false

[[bench]]
name = "async_mutex"
harness = false

[[bench]]
name = "mutex_worst_latency"
harness = false