[package]
name = "colock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
event = { path = "../event" }

[dev-dependencies]
itertools = "0.13.0"
tokio = { version = "1", features = ["full"] }
tokio-scoped = "0.2.0"
futures-polling = "0.1.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
tokio-test = "0.4.3"