[package]
name = "colock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intrusive_list = { path = "../intrusive_list" }
parking = {path = "../parking"}

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-scoped = "0.2.0"
tokio-test = "0.4.3"
