[package]
name = "event"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking = { path = "../parking" }
intrusive_list = { path = "../intrusive_list" }


[dev-dependencies]
itertools = "0.12.1"
tokio = { version = "1", features = ["full"] }
tokio-scoped = "0.2.0"
futures-polling = "0.1.1"
