[package]
name = "mini_lock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking = {path = "../parking"}


[dev-dependencies]
itertools = "0.11.0"
tokio = { version = "1", features = ["full"] }
tokio-scoped = "0.2.0"
futures-polling = "0.1.1"